--- a/index.html
+++ b/index.html
@@ -9,11 +9,38 @@
 
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 		<link rel="stylesheet" href="css/bootstrap.css" />
+		<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+
+		<!-- My Script -->
 		<link rel="stylesheet" href="css/main.css" />
+		<script src="app.js"></script>
 	</head>
 
 	<body>
-
+		<div class="container mt-5">
+			<div class="row align-items-center flex-column">
+				<div class="col-md-6">
+					<input type="text" class="form-control bg-white add-info" placeholder="Your Todo Here..." />
+				</div>
+				<div class="col-md-6 py-1 msg">
+					<p>Your Msg Here...</p>
+				</div>
+				<div class="col-md-6 mt-4 todo-container">
+					<div class="todo d-flex align-items-center justify-content-between bg-info">
+						<span class="serial bg-black">01</span>
+						<span class="info">Play Football</span>
+						<img src="img/pencil.svg" class="edit" title="Edit" alt="edit" />
+						<img src="img/trash.svg" class="delete" title="Eelete" alt="delete" />
+					</div>
+					<div class="todo d-flex align-items-center justify-content-between bg-info">
+						<span class="serial bg-black">02</span>
+						<span class="info">Play Football</span>
+						<img src="img/pencil.svg" class="edit" title="Edit" alt="edit" />
+						<img src="img/trash.svg" class="delete" title="Eelete" alt="delete" />
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 
 </html>
