--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 					<!-- <div data-id="1" class="todo d-flex align-items-center justify-content-between bg-info">
 						<span class="serial bg-black">01</span>
 						<span class="info">Play Football</span>
+						<img class="img-done" src="img/done.svg" />
 						<img src="img/pencil.svg" class="edit" title="Edit" alt="edit" />
 						<img src="img/trash.svg" class="delete" title="Eelete" alt="delete" />
 					</div>
 					<div data-id="2" class=" todo d-flex align-items-center justify-content-between bg-info">
 						<span class="serial bg-black">02</span>
 						<span class="info">Play Football</span>
+						<img class="done" src="" />
 						<img src="img/pencil.svg" class="edit" title="Edit" alt="edit" />
 						<img src="img/trash.svg" class="delete" title="Eelete" alt="delete" />
 					</div> -->
